--- a/libraries/tools/kotlin-maven-sam-with-receiver/pom.xml
+++ b/libraries/tools/kotlin-maven-sam-with-receiver/pom.xml
@@ -5,11 +5,12 @@
 
     <modelVersion>4.0.0</modelVersion>
     <properties>
-        <maven-plugin-anno.version>1.4.1</maven-plugin-anno.version>
-        <maven.version>3.0.4</maven.version>
-        <android-extensions.src>${basedir}/../../../plugins/android-extensions/android-extensions-compiler/src</android-extensions.src>
-        <android-extensions.target-src>${basedir}/target/src</android-extensions.target-src>
-        <android-extensions.target-resource>${basedir}/target/resource</android-extensions.target-resource>
+        <maven.version>3.0.5</maven.version>
+        <sam.src>${basedir}/../../../plugins/sam-with-receiver/sam-with-receiver-cli/src</sam.src>
+        <sam.maven.plugin.src>${basedir}/src/main/kotlin</sam.maven.plugin.src>
+        <sam.maven.plugin.resources>${basedir}/src/main/resources</sam.maven.plugin.resources>
+        <sam.target-src>${basedir}/target/src/main/kotlin</sam.target-src>
+        <sam.target-resources>${basedir}/target/resource</sam.target-resources>
     </properties>
 
     <parent>
@@ -19,29 +20,37 @@
         <relativePath>../../pom.xml</relativePath>
     </parent>
 
-    <artifactId>kotlin-android-extensions</artifactId>
+    <artifactId>kotlin-maven-sam-with-receiver</artifactId>
     <packaging>jar</packaging>
 
-    <description>Android compiler plugin for Kotlin</description>
+    <description>"SAM with Receiver" plugin for Maven</description>
+
+    <repositories>
+        <repository>
+            <id>jetbrains-utils</id>
+            <url>http://repository.jetbrains.com/utils</url>
+        </repository>
+    </repositories>
 
     <dependencies>
         <dependency>
             <groupId>org.jetbrains.kotlin</groupId>
-            <artifactId>kotlin-compiler-embeddable</artifactId>
+            <artifactId>kotlin-stdlib</artifactId>
             <version>${project.version}</version>
         </dependency>
         <dependency>
             <groupId>org.jetbrains.kotlin</groupId>
-            <artifactId>kotlin-android-extensions-runtime</artifactId>
+            <artifactId>kotlin-maven-plugin</artifactId>
             <version>${project.version}</version>
+            <scope>provided</scope>
         </dependency>
     </dependencies>
 
     <build>
-        <sourceDirectory>${android-extensions.target-src}</sourceDirectory>
+        <sourceDirectory>${sam.target-src}</sourceDirectory>
         <resources>
             <resource>
-                <directory>${android-extensions.target-resource}</directory>
+                <directory>${sam.target-resources}</directory>
             </resource>
         </resources>
 
@@ -57,9 +66,10 @@
                             <goal>copy-resources</goal>
                         </goals>
                         <configuration>
-                            <outputDirectory>${android-extensions.target-src}</outputDirectory>
+                            <outputDirectory>${sam.target-src}</outputDirectory>
                             <resources>
-                                <resource><directory>${android-extensions.src}</directory></resource>
+                                <resource><directory>${sam.src}</directory></resource>
+                                <resource><directory>${sam.maven.plugin.src}</directory></resource>
                             </resources>
                         </configuration>
                     </execution>
@@ -70,37 +80,14 @@
                             <goal>copy-resources</goal>
                         </goals>
                         <configuration>
-                            <outputDirectory>${android-extensions.target-resource}/META-INF</outputDirectory>
+                            <outputDirectory>${sam.target-resources}/META-INF</outputDirectory>
                             <resources>
-                                <resource><directory>${android-extensions.src}/META-INF</directory></resource>
+                                <resource><directory>${sam.src}/META-INF</directory></resource>
+                                <resource><directory>${sam.maven.plugin.resources}/META-INF</directory></resource>
                             </resources>
                         </configuration>
                     </execution>
                 </executions>
-            </plugin>
-            <plugin>
-                <groupId>com.google.code.maven-replacer-plugin</groupId>
-                <artifactId>replacer</artifactId>
-                <version>1.5.3</version>
-                <executions>
-                    <execution>
-                        <phase>generate-sources</phase>
-                        <goals>
-                            <goal>replace</goal>
-                        </goals>
-                    </execution>
-                </executions>
-                <configuration>
-                    <includes>
-                        <include>${android-extensions.target-src}/**</include>
-                    </includes>
-                    <replacements>
-                        <replacement>
-                            <token>(?&lt;!\.)com\.intellij</token>
-                            <value>org.jetbrains.kotlin.com.intellij</value>
-                        </replacement>
-                    </replacements>
-                </configuration>
             </plugin>
             <plugin>
                 <artifactId>kotlin-maven-plugin</artifactId>
@@ -114,19 +101,31 @@
                         <goals> <goal>compile</goal> </goals>
                         <configuration>
                             <sourceDirs>
-                                <sourceDir>${android-extensions.target-src}</sourceDir>
+                                <sourceDir>${sam.target-src}</sourceDir>
                             </sourceDirs>
                         </configuration>
                     </execution>
                 </executions>
             </plugin>
+            <plugin>
+                <groupId>org.codehaus.plexus</groupId>
+                <artifactId>plexus-component-metadata</artifactId>
+                <version>1.7.1</version>
+                <executions>
+                    <execution>
+                        <id>process-classes</id>
+                        <goals>
+                            <goal>generate-metadata</goal>
+                        </goals>
+                    </execution>
+                    <execution>
+                        <id>process-test-classes</id>
+                        <goals>
+                            <goal>generate-test-metadata</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
         </plugins>
     </build>
-
-    <repositories>
-        <repository>
-            <id>jetbrains-utils</id>
-            <url>http://repository.jetbrains.com/utils</url>
-        </repository>
-    </repositories>
 </project>
