--- a/libraries/stdlib/js/build.gradle
+++ b/libraries/stdlib/js/build.gradle
@@ -110,6 +110,7 @@ compileBuiltinsKotlin2Js {
     kotlinOptions {
         metaInfo = false
         outputFile = "${buildDir}/classes/builtins/kotlin.js"
+        sourceMap = true
     }
 }
 
@@ -117,6 +118,7 @@ compileKotlin2Js {
     dependsOn preprocessSourcesMain, prepareBuiltinsSources
     kotlinOptions {
         outputFile = "${buildDir}/classes/main/kotlin.js"
+        sourceMap = true
     }
 }
 
@@ -131,47 +133,50 @@ configurations {
     closureCompiler
 }
 dependencies {
-    closureCompiler "com.google.javascript:closure-compiler:v20160315"
+    closureCompiler "com.google.javascript:closure-compiler:v20170521"
 }
 
-task compileJs {
+task compileJs(type: JavaExec) {
     dependsOn compileBuiltinsKotlin2Js, compileKotlin2Js
     inputs.files(compileBuiltinsKotlin2Js.outputs.files)
     inputs.files(compileKotlin2Js.outputs.files)
     inputs.dir(jsSrcDir)
     outputs.file(jsOutputFile)
+    outputs.file("${jsOutputFile}.map")
 
+    def closureArgs = [
+            "--compilation_level", "WHITESPACE_ONLY",
+            "--formatting", "PRETTY_PRINT",
+            "--language_in", "ECMASCRIPT5_STRICT",
+            "--js_output_file", jsOutputFile,
+            "--output_wrapper_file", "${jsSrcJsDir}/closure-wrapper.txt",
+            "--create_source_map", "${jsOutputFile}.map",
+            "--source_map_location_mapping", "$buildDir/classes/builtins/|",
+            "--source_map_location_mapping", "$buildDir/classes/main/|",
+            "--source_map_location_mapping", "${file(jsSrcJsDir).canonicalPath}/|",
+    ]
+
+    def inputFiles = fileTree("${jsSrcJsDir}") {
+        include '**/*.js'
+    }
+    inputFiles += fileTree("${buildDir}/classes") {
+        include 'builtins/kotlin.js'
+    }
+    inputFiles += fileTree("${buildDir}/classes") {
+        include 'main/kotlin.js'
+    }
+
+    def inputArgs = inputFiles.collect { ["--js", it] }.flatten()
+    def inputSourceMapsArgs = [
+            "--source_map_input", "$buildDir/classes/builtins/kotlin.js|${buildDir}/classes/builtins/kotlin.js.map",
+            "--source_map_input", "$buildDir/classes/main/kotlin.js|${buildDir}/classes/main/kotlin.js.map",
+    ]
+
+    main = "com.google.javascript.jscomp.CommandLineRunner"
+    args = closureArgs + inputArgs + inputSourceMapsArgs
+    classpath = configurations.closureCompiler
 
     doLast {
-        ant.taskdef(
-                name: 'closureCompiler',
-                classname: 'com.google.javascript.jscomp.ant.CompileTask',
-                classpath: configurations.closureCompiler.asPath)
-
-        ant.closureCompiler(
-                compilationLevel: 'whitespace',
-                prettyprint: 'true',
-                languagein: 'ECMASCRIPT5_STRICT',
-                warning: 'default',
-                output: jsOutputFile,
-                outputWrapperFile: "${jsSrcJsDir}/closure-wrapper.txt"
-        ) {
-            ant.path {
-                fileset(dir: "${jsSrcJsDir}") {
-                    include(name: '**/*.js')
-                    exclude(name: 'externs.js')
-                }
-                fileset(dir: "${buildDir}/classes") {
-                    include(name: 'builtins/kotlin.js')
-                    include(name: 'main/kotlin.js')
-                }
-            }
-
-            externs(dir: "${jsSrcJsDir}") {
-                ant.file(name: 'externs.js')
-            }
-        }
-
         ant.replaceregexp(
                 file: jsOutputFile,
                 match: "module.exports,\\s*require\\([^)]+\\)",
@@ -187,6 +192,29 @@ task compileJs {
                 match: "return\\s+_;",
                 replace: "",
                 byline: "true", encoding: "UTF-8")
+
+        def sourceMapFile = file("${jsOutputFile}.map")
+        def sourceMap = new groovy.json.JsonSlurper().parseText(sourceMapFile.text)
+        def sourceMapSourcesBaseDirs = [ "${rootDir}/..", jsSrcJsDir ]
+
+        sourceMap.sourcesContent = sourceMap.sources.collect { sourceName ->
+            sourceMapSourcesBaseDirs.collect { file("$it/$sourceName") }.find { it.exists() && it.name != "kotlin.js" }?.text
+        }
+
+        def sourceMapBasePaths = [
+                "js/js.libraries/src/",
+                "libraries/stdlib/js/build/builtin-sources/",
+                "libraries/stdlib/js/build/builtin-sources-for-builtins/",
+                "libraries/stdlib/js/build/builtin-sources-for-builtins/",
+                "libraries/stdlib/js/build/common-sources/"
+        ]
+
+        sourceMap.sources = sourceMap.sources.collect { sourcePath ->
+            def prefixToRemove = sourceMapBasePaths.find { basePath -> sourcePath.startsWith(basePath) }
+            if (prefixToRemove != null) sourcePath.substring(prefixToRemove.length()) else sourcePath
+        }
+
+        sourceMapFile.text = groovy.json.JsonOutput.toJson(sourceMap)
     }
 }
 
@@ -211,6 +239,7 @@ task mergedJar(type: Jar, dependsOn: classes) {
     includeEmptyDirs false
     duplicatesStrategy DuplicatesStrategy.EXCLUDE
     from jsOutputFile
+    from "${jsOutputFile}.map"
     from sourceSets.main.output
 }
 
