--- a/libraries/stdlib/js/build.gradle
+++ b/libraries/stdlib/js/build.gradle
@@ -129,13 +129,11 @@ compileTestKotlin2Js {
     }
 }
 
-task compileMerger(type: KotlinCompile) {
-    source {
-        file("${baseDir}/src/FileMerger.kt")
-    }
-    destinationDir {
-        file("${buildDir}/merger-classes")
-    }
+configurations {
+    closureCompiler
+}
+dependencies {
+    closureCompiler "com.google.javascript:closure-compiler:v20170521"
 }
 
 task compileJs(type: JavaExec) {
@@ -176,7 +174,7 @@ task compileJs(type: JavaExec) {
 
     main = "com.google.javascript.jscomp.CommandLineRunner"
     args = closureArgs + inputArgs + inputSourceMapsArgs
-    classpath = "${buildDir}/merger-classes"
+    classpath = configurations.closureCompiler
 
     doLast {
         ant.replaceregexp(
