--- a/libraries/tools/script-runtime/build.gradle
+++ b/libraries/tools/script-runtime/build.gradle
@@ -32,6 +32,7 @@ dist {
 }
 
 compileKotlin {
+    kotlinOptions.jdkHome = JDK_18
     kotlinOptions.freeCompilerArgs = [
             "-Xallow-kotlin-package",
             "-module-name", project.name
