--- a/libraries/tools/kotlin-gradle-plugin-integration-tests/src/test/resources/testProject/kotlin2JsDceProject/mainProject/build.gradle
+++ b/libraries/tools/kotlin-gradle-plugin-integration-tests/src/test/resources/testProject/kotlin2JsDceProject/mainProject/build.gradle
@@ -8,7 +8,7 @@ buildscript {
 }
 
 apply plugin: "kotlin2js"
-apply plugin: "kotlinJsDce"
+apply plugin: "kotlin-js-dce"
 
 repositories {
     mavenLocal()
