~fixup cee2382484965ff1bb564d2f7cb31b1554a78b49: kotlin-js-dce -> kotlin-dce-js

--- a/libraries/tools/kotlin-gradle-plugin-integration-tests/src/test/resources/testProject/kotlin2JsDceProject/mainProject/build.gradle
+++ b/libraries/tools/kotlin-gradle-plugin-integration-tests/src/test/resources/testProject/kotlin2JsDceProject/mainProject/build.gradle
@@ -8,7 +8,7 @@ buildscript {
 }
 
 apply plugin: "kotlin2js"
-apply plugin: "kotlin-js-dce"
+apply plugin: "kotlin-dce-js"
 
 repositories {
     mavenLocal()
