--- a/libraries/stdlib/build.gradle
+++ b/libraries/stdlib/build.gradle
@@ -110,7 +110,7 @@ task compileCheckJavacManual {
         exec {
             executable = "${JDK_16}/bin/javac"
             args = ['-source', '1.6', '-target', '1.6', '-d', targetDir.toString(), '-g',
-                    '-sourcepath', '-proc:none',  '-XDuseUnsharedTable=true', '-classpath']
+                    '-sourcepath', '-proc:none', '-classpath']
             args configurations.compile.collect { it.toString() }.join(File.pathSeparator)
             args file("${projectDir}/srcJava/org/test/TestAnnotated.java").toString()
             println(args)
