--- a/libraries/stdlib/build.gradle
+++ b/libraries/stdlib/build.gradle
@@ -122,7 +122,7 @@ task compileCheckJavacManual {
             executable = "${JDK_18}/bin/javac"
             args = ['-source', '1.6', '-target', '1.6', '-d', targetDir.toString(), '-g',
                     '-sourcepath', '-proc:none', '-classpath']
-            args configurations.compile.collect { it.toString() }.join(File.pathSeparator)
+            args file("${projectDir}/deps/annotations-13.0.jar").toString()
             args file("${projectDir}/srcJava/org/test/TestAnnotated.java").toString()
             println(args)
         }
