~fixup: move merger project to another directory

--- a/libraries/tools/stdlib-js-merger/build.gradle
+++ b/libraries/tools/stdlib-js-merger/build.gradle
@@ -7,9 +7,5 @@ dependencies {
 }
 
 sourceSets {
-    main {
-        kotlin {
-            srcDir 'src'
-        }
-    }
+    main.kotlin.srcDirs += 'src'
 }
