~ fixup: move merger module

--- a/libraries/stdlib/js/build.gradle
+++ b/libraries/stdlib/js/build.gradle
@@ -54,7 +54,7 @@ configurations {
 }
 dependencies {
     testCompile project(':kotlin-test:kotlin-test-js')
-    merger project(":kotlin-stdlib-js-merger")
+    merger project(":tools:kotlin-stdlib-js-merger")
 }
 
 createPreprocessorTask(project, "Main", "${projectDir}/../src/kotlin", commonSrcDir)
