--- a/libraries/settings.gradle
+++ b/libraries/settings.gradle
@@ -8,12 +8,12 @@ include ':kotlin-test:kotlin-test-junit'
 include ':kotlin-test:kotlin-test-js'
 include ':kotlin-stdlib-common'
 include ':kotlin-stdlib'
-include ':kotlin-stdlib-js-merger'
 include ':kotlin-stdlib-js'
 include ':kotlin-stdlib-jre7'
 include ':kotlin-stdlib-jre8'
 include ':kotlin-stdlib:samples'
 include ':tools:binary-compatibility-validator'
+include ':tools:kotlin-stdlib-js-merger'
 include ':tools:kotlin-stdlib-gen'
 include ':tools:protobuf-lite'
 include ':kotlin-reflect'
@@ -60,7 +60,6 @@ project(':kotlin-test:kotlin-test-junit').projectDir = "$rootDir/kotlin.test/jun
 project(':kotlin-test:kotlin-test-js').projectDir = "$rootDir/kotlin.test/js" as File
 project(':kotlin-stdlib-common').projectDir = "$rootDir/stdlib/common" as File
 project(':kotlin-stdlib').projectDir = "$rootDir/stdlib" as File
-project(':kotlin-stdlib-js-merger').projectDir = "$rootDir/tools/stdlib-js-merger" as File
 project(':kotlin-stdlib-js').projectDir = "$rootDir/stdlib/js" as File
 project(':kotlin-stdlib-jre7').projectDir = "$rootDir/stdlib/jre7" as File
 project(':kotlin-stdlib-jre8').projectDir = "$rootDir/stdlib/jre8" as File
