--- a/libraries/stdlib/js/build.gradle
+++ b/libraries/stdlib/js/build.gradle
@@ -146,8 +146,8 @@ task compileJs(type: JavaExec) {
     }
 
     main = "org.jetbrains.kotlin.js.FileMergerKt"
-    args = [jsOutputFile, "$jsSrcDir/wrapper.js"] + inputFiles.collect { it.path } +
-           ["${buildDir}/classes/builtins/kotlin.js", "${buildDir}/classes/main/kotlin.js"]
+    args = [jsOutputFile, "$rootDir/../", "$jsSrcDir/wrapper.js"] + inputFiles.collect { it.path } +
+           ["$buildDir/classes/builtins/kotlin.js", "$buildDir/classes/main/kotlin.js"]
     classpath = configurations.merger
 
     doLast {
